# markdown-cli-jrl

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml
markdown_cli/: __init__.py  app.py  cli.py  styles.tcss  widgets.py
scripts/: install-ubuntu.sh
